guestbook-sample/guestbook-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guest-books
spec:
  replicas: 3
  selector:
    matchLabels:
      app: books
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: guest-books
          image: oldxu3957/guestbook:v5
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 200m
              memory: 400Mi
