guestbook-sample/redis-leader-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-leader
spec:
  selector:
    matchLabels:
      app: redis-leader
  template:
    metadata:
      labels:
        app: redis-leader
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
