guestbook-sample/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-svc
spec:
  type: ClusterIP
  selector:
    app: books
  ports:
    - name: http
      port: 80
      targetPort: 80
