guestbook-sample/redis-leader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-leader
spec:
  type: ClusterIP
  selector:
    app: redis-leader
  ports:
    - port: 6379
      targetPort: 6379
