guestbook-sample/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbooks-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: guestbook.chasecup.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-svc
                port:
                  number: 80
